Add better reset functionality

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <p class="blacktext">Navigate the battlefield using the arrow keys (up, down, left, and right).<br> Strategically position your shots and hideaways with the keys q, w, e, a, s, d, z, x, and c.</p>
                     
-                    <p class="blacktext">For a quick reset, press the 'r' key.</p>
+                    <p class="blacktext">Reset by hitting any key after a round.</p>
                     
                     <p class="blacktext">Ready to become the top gun?</p>
             </div>
